# MAPS

./: .gitignore  .gitmodules  Makefile  README.md  __init__.py  pyproject.toml
MAPS/arch/: README.md  __init__.py  device.py  memory.py  mesh.py  noc.py  tile.py
MAPS/builders/: __init__.py  gemm_builder.py  remap_builder.py  transition_builder.py
MAPS/chips/: magia.py
MAPS/core/: __init__.py  graph.py  layer.py  layout.py  ownership.py  pipeline.py  stage.py  submesh.py  tensor.py  transition.py
MAPS/cost_models/: __init__.py  collective_cost.py  conv_cost.py  cost.py  elementwise_cost.py  exp_cost.py  gemm_cost.py  reduction_cost.py  transition_cost.py  transport_cost.py
builders/: __init__.py
core/: __init__.py  graph.py  layer.py  layout.py  mesh.py  ownership.py  pipeline.py  tensor.py
cost_models/: gemm_cost.py  transport_cost.py
examples/: magia_example.py  n300d_example.py  n300d_example_v2.py  simple_three_stage.onnx
ops/: gemm.py
tests/: noc_utils.py  test_chips_magia.py  test_chips_magia_noc.py  test_chips_n300d.py  test_device_cost.py  test_gemm_ownership.py  test_layer_collective.py  test_layer_conv.py  test_layer_exp.py  test_layer_gemm.py  test_layer_reduce.py  test_mesh.py  test_noc.py  test_onnx_import_layers.py  test_onnx_import_pipeline.py  test_onnx_import_tensors.py  test_operation_contracts.py  test_ownership.py  test_plan.py  test_plan_v2.py  test_planner_constraints.py  test_select_stage.py  test_spatial_mapping.py  test_transition_builder.py  test_transition_cost.py  test_transport_cost.py  test_workload_balancing.py
(+146 files in other folders)
