[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MAPS"
version = "0.0.1"
description = "MAGIA mesh scheduler"
requires-python = ">=3.10"
dependencies = [
  "onnx==1.20.1",
  "pulp==3.3.0",
]

[project.optional-dependencies]
dev = [
  "debugpy==1.8.20",
  "netron==8.9.6",
  "pynvim==0.6.0",
  "pytest==9.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["MAPS*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
